# alp-sdk

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GAP_REVIEW_2026-05-29.md  LICENSE  License.txt  MORNING_BRIEF.md  NOTICE  PLAN.md  README.md  SECURITY.md  TRADEMARKS.md  VERSIONS.md  _confirmed_findings.json  alp-sdk.cbuild-idx.yml  alp-sdk.csolution.yml  bash.exe.stackdump  download_board.bat  llms.txt  pyproject.toml  west.yml
examples/aen/aen-a32-carrier-bringup/: CMakeLists.txt  README.md  board.yaml
examples/aen/aen-adc-regcheck/: CMakeLists.txt  prj.conf
examples/aen/aen-aipm-read/: CMakeLists.txt  README.md  prj.conf
examples/aen/aen-alp-rpc/: CMakeLists.txt  README.md  prj.conf
examples/aen/aen-analog-validate/: CMakeLists.txt  README.md  board.yaml  prj.conf  testcase.yaml
examples/aen/aen-camera-regcheck/: CMakeLists.txt  prj.conf
examples/aen/aen-can-regcheck/: CMakeLists.txt  app.overlay  prj.conf
examples/aen/aen-cc3501e-bringup/: CMakeLists.txt  README.md  board.yaml  prj.conf  testcase.yaml
examples/drone-autopilot/: CMakeLists.txt  README.md  board.yaml  prj.conf  testcase.yaml
examples/drone-autopilot/src/: autopilot.c  main.c  mavlink.c  mavlink.h  sbus.h
examples/lvgl-widgets-demo/: CMakeLists.txt  README.md  board.yaml  prj.conf  testcase.yaml
examples/lvgl-widgets-demo/src/: main.c
examples/mproc-dual-os-yocto-zephyr/: CMakeLists.txt  README.md  board.yaml  prj.conf  testcase.yaml
examples/mproc-dual-os-yocto-zephyr/linux/: CMakeLists.txt  main.c
examples/spi-master/: CMakeLists.txt  README.md  board.yaml  testcase.yaml
firmware/cc3501e/: BRINGUP_STATUS.md  CMakeLists.txt  DESIGN.md  README.md  flash.py
firmware/gd32-bridge/: CMakeLists.txt  README.md
fuzz/: CMakeLists.txt  README.md  cc3501e_fuzz.c  eeprom_manifest_fuzz.c  gd32_bridge_frame_fuzz.c  iot_mqtt_fuzz.c  swd_packet_fuzz.c
gd32-bridge/: CMakeLists.txt  README.md
gd32-bridge/hal/: bridge_hw.h  bridge_hw_gd32.c  bridge_hw_stub.c  gd32_libc_stubs.c  gd32g5x3_libopt.h
gd32-bridge/src/: main.c  protocol.c  protocol.h  transport_i2c.c  transport_spi.c
gd32-bridge/tests/: gen_protocol_vectors.py  protocol_vectors.txt
gd32-bridge/toolchain/: gd32g553_flash.ld
src/baremetal/: CMakeLists.txt  dispatch_last_error_shim.c
src/common/: CMakeLists.txt  alp_checked_arith.h  alp_dispatch_cache.h  alp_errno.h  alp_internal.h  alp_model.c  alp_model_loader.c  alp_range.h  alp_slot_claim.c  alp_slot_claim.h  alp_thread_token.h  alp_z_last_error.h  dsp_chain.c  hw_info_manifest.h  stub_backend.c  version.c
src/yocto/: CMakeLists.txt  audio_yocto.c  dispatch_last_error_shim.c  inference_deepx.cpp  inference_drpai.cpp  inference_yocto.c  iot_yocto.c  peripheral_can.c  peripheral_gpio.c  peripheral_i2c.c  peripheral_i2s.c  peripheral_rtc.c  peripheral_spi.c  peripheral_uart.c  peripheral_wdt.c  rpc_yocto.c  security_yocto.c  yocto_errno.h
tests/: CMakeLists.txt  smoke.c
tests/baremetal/: CMakeLists.txt  registry_static_link.c
tests/bench/: CMakeLists.txt  README.md  baseline_runner.py  bench.h  bench_audio.c  bench_dsp.c  bench_inference.c  bench_iot.c  bench_main.c  bench_peripheral.c  bench_power.c  bench_security.c  bench_status.c  bench_storage.c  bench_tmu.c
tests/common/: delay.c  eeprom_24c128_range.c
tests/console/: CMakeLists.txt  app.overlay  prj.conf  testcase.yaml
tests/fixtures/: board_schema_version_2.yaml
tests/fuzz/: CMakeLists.txt  README.md  ble_adv_parser_fuzz.c  cc3501e_fuzz.c  eeprom_manifest_fuzz.c  gd32_bridge_frame_fuzz.c  iot_mqtt_fuzz.c  mproc_frame_fuzz.c  optiga_apdu_fuzz.c  swd_packet_fuzz.c  tls_handshake_fuzz.c  update_log_entry_fuzz.c
tests/hil/: README.md  run_smoke.py
tests/parity/: README.md  seam1_field_diff.py  test_seam1_field_diff.py
tests/renode/: aen_m55_itcm_run.overlay  aen_m55_sim.conf  v2n_m33_ramconsole.conf
tests/scripts/: _orchestrate_support.py  _project_support.py  conftest.py  test_abi_snapshot.py  test_abi_snapshot_freeze_gate.py  test_aen_cc3501e_routes.py  test_aen_se_backend_scope.py  test_alif_flash_runner.py  test_alif_isp_backend_scope.py  test_alp_cli.py  test_alp_cli_build.py  test_alp_cli_doctor.py  test_alp_cli_emit.py  test_alp_cli_model.py  test_alp_cli_new_som.py  test_alp_explain.py  test_alp_faultdecode.py  test_alp_lock.py  test_alp_mcp.py  test_alp_migrate.py  test_alp_model_adapters.py  test_alp_model_analyze.py  test_alp_model_build.py  test_alp_model_manifest.py  test_alp_model_measure.py  test_alp_model_package.py  test_alp_model_prep.py  test_alp_model_targets.py  test_alp_model_tensorio.py  test_alp_model_zoo.py  test_alp_orchestrate.py  test_alp_project.py  test_alp_project_diagnostics.py  test_alp_project_scaffold_emit.py  test_alp_quality.py  test_alp_renode.py  test_alp_renode_sim.py  test_alp_size.py  test_alp_template.py  test_bitbake_paths_cover_recipe_sources.py  (+91 more)
tests/yocto/: CMakeLists.txt  alp_errno.c  audio_alsa.c  ble_dispatch_self_close.c  build_rpc_uio_bench_aarch64.sh  can_add_filter_close_race.c  can_yocto_self_close.c  dispatch_cache_race.c  gpu2d_dispatcher.c  gpu2d_slot_race.c  inference_dispatcher.c  iot_mqtt.c  last_error_threading.c  mqtt_dispatch_self_close.c  peripheral_gpio.c  peripheral_gpio_irq_rollback.c  peripheral_gpio_self_close.c  peripheral_i2c.c  peripheral_power.c  peripheral_pwm.c  peripheral_spi.c  peripheral_uart.c  peripheral_wdt.c  registry_static_link.c  registry_sw_fallback.c  rpc_dispatch_close_race.c  rpc_uio_bench_main.c  rpc_uio_self_close.c  rpc_yocto_open_fail.c  rpc_yocto_self_close.c  run_sanitized_rpc_tests.sh  security_openssl.c  slot_claim_race.c  test_assert.h
vendors/alif/: CMakeLists.txt  README.md  gpio.c  i2c.c  spi.c  uart.c
vendors/deepx-dxm1/: CMakeLists.txt  README.md
vendors/gd32_firmware_library/: CMakeLists.txt  README.md
vendors/renesas-rzv2n/: CMakeLists.txt  README.md  gpio.c  i2c.c  spi.c  uart.c
(+3817 files in other folders)
