[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alp-sdk-cli"
version = "0.13.0"
description = "Command-line front-end for the Alp SDK"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.0",
    "cryptography>=41.0",
    "click>=8.1",
    "cbor2>=5.0",
    "questionary>=2.0",
    "colorama>=0.4.6",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-snapshot>=0.9",
    "pytest-mock>=3.10",
]
# Lightweight TFLite read/parse deps (tensor-I/O extraction + the hermetic
# fixture generator) -- pure-Python, no compiler.  CI installs this so the
# tensor-I/O tests run without pulling the heavy ethos-u-vela sdist.
model-io = [
    "tflite>=2.10",
    "flatbuffers>=23.1.21",
]
# Full host model-compile toolchain (adds the Vela Ethos-U compiler).
model-compile = [
    "ethos-u-vela>=3.9",
    "tflite>=2.10",
    "flatbuffers>=23.1.21",
]
# Customer-facing MCP (Model Context Protocol) server -- exposes the SDK
# catalog + validator/emit runtime to an MCP-capable agent.  Optional: only
# needed to run the `alp-mcp` stdio server.
mcp = [
    "mcp>=1.2",
]
# License-free INT8 quantize + fp32-vs-int8 accuracy report ("alp model prep").
# onnxruntime.quantization + sympy (symbolic shape inference) only -- no vendor
# toolchain (Vela/dxcom/DRP-AI).
model-prep = [
    "onnxruntime>=1.17",
    "onnx>=1.15",
    "numpy>=1.23",
    "sympy>=1.11",
]

# No `alp` console-script: `tan` (the standalone Rust CLI) is the sole
# user-facing command surface (ADR-0020 end-state B). The `alp_cli` package
# stays as tan's Python backend, invoked as `python -m alp_cli <sub>` — never
# as a user-installed `alp` binary.
[project.scripts]
alp-mcp = "alp_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["alp_cli*", "alp_mcp*"]
